--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@ h1 {
   text-align: center;
 }
 
+.croissant-photo {
+  max-width: 100%;
+  border-radius: 10px;
+  margin: 30px 0;
+  display: block;
+}
+
 footer {
   text-align: center;
 }
