--- a/css/style.css
+++ b/css/style.css
@@ -7,18 +7,21 @@ h1 {
 }
 
 .croissant-photo {
-  max-width: 100%;
+  max-width: 300px;
   border-radius: 10px;
-  margin: 30px 0;
+  margin: 30px auto;
   display: block;
 }
 
+p {
+  text-align: center;
+}
 footer {
   text-align: center;
 }
 
 footer a {
   margin: 0 10px;
-  color: rgb(118, 64, 169);
+  color: rgb(3, 77, 26);
   text-decoration: none;
 }
